--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@ layout: default
 <!doctype html>
 <html>
   <head>
-    <title>Testin123</title>
+    <title>Welcome</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <!--<p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    -->
+    <p> This repository includes small projects I've done in the past, including a magic card game and a Who wants to be a millioniare game made using netbeans.</p>
   </body>
 </html>
