--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@ layout: default
   <body>
     <!--<p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
     -->
-    <p> This repository includes small projects I've done in the past, including a magic card game and a Who wants to be a millioniare game made using netbeans.</p>
+    <p> This repository includes small projects I've done in the past, 
+      including a magic card game and a Who wants to be a millioniare game made using netbeans.
+    </p>
+    
+    <h2> 
+      Testing123
+    </h2>
+    
   </body>
 </html>
